  for example by some extensions or from data variables. If any of these is not replaced by some value, an exception
  will be thrown at runtime.

==== Ant support removed

`SpecClassFileSelector` was removed, which was the only class that required `ant`.
If you are still using spock with `ant`, then you can just copy the class from the spock source code into your build.

=== Misc

- Defining interactions on property getters within Mock instantiation closures or `with` closures works now without
  the need to explicitly qualify the property access with `it.`:
+
[source,groovy]
----
Foo foo = Stub {
    bar >> 'my stubbed property'
}
----

- A sequence of two or more underscores can be used to separate multiple data tables in one `where` block.

- Type casts in conditions are now properly carried over to properly disambiguate method calls.
  For more information see issue https://github.com/spockframework/spock/issues/1022[#1022].

- Data tables now support any amount of semicolons to separate data table columns as alternative
  to pipes and double pipes, but cannot be mixed with them in one table:
+
[source,groovy]
----
where:
a ; b ;; c
1 ; 2 ;; 3
----

// tag::fancy-iteration-naming[]
- The default unroll pattern changed from the rather generic `#featureName[#iterationIndex]` to a more fancy
  version that lists all data variables and their values additionally to the feature name and iteration index.
  If you prefer to retain the old behaviour, you can set the system property `spock.globalUnrollPattern`
  to the value `#featureName[#iterationIndex]` and you will get the same result as previously.
// end::fancy-iteration-naming[]

- If neither a parameter to the `@Unroll` annotation is given, nor the method name contains a `#`,
  now the system property `spock.globalUnrollPattern` is inspected. If it is set to a non-blank string,
  this value is used as unroll pattern.
