@@ -15,6 +15,8 @@ include::interaction_based_testing.adoc[leveloffset=+1]
 
 include::extensions.adoc[leveloffset=+1]
 
+include::utilities.adoc[leveloffset=+1]
+
 include::modules.adoc[leveloffset=+1]
 
 include::release_notes.adoc[leveloffset=+1]
